--- a/services/auth/k8s/service.yaml
+++ b/services/auth/k8s/service.yaml
@@ -14,3 +14,7 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 8080
+    - name: grpc
+      protocol: TCP
+      port: 50051
+      targetPort: 50051
